--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/* GENERAL CSS*/
+
+:root {
+    --main-color: #36244F;
+    --secondary-color: #FABA61;
+    --light-text: #EFF1FC;
+    --bg-color: #EFF1FC;
+    --mute-text: #7A7E86;
+}
+
 * {
     list-style-type: none;
 }
