--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ p {
     color: var(--main-color) !important;
 }
 
+.full-height {
+    height: 100%;
+}
+
 /* NAVBAR */
 .navbar {
     background-color: var(--main-color) !important;
@@ -101,6 +105,24 @@ p {
     font-size: 4rem;
 }
 
+#Header img {
+    max-width: 500px;
+}
+
+/* FORMAZIONE */
+#Formazione {
+    background-color: var(--main-color);
+    color: var(--light-text) !important;
+}
+
+#Formazione h2 {
+    color: var(--light-text) !important;
+}
+
+#Formazione img {
+    max-width:100%;
+    max-height:100%;
+}
 
 
 
