--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,16 @@ p {
     border-radius: 1.2rem !important;
     padding: 0.5rem 2rem !important;
     font-weight: 600 !important;
+    transition: 0.2s;
 }
 
 .more-btn span {
     padding-left: 1rem;
+}
+
+.more-btn:hover {
+    transform: scale(1.01);
+    box-shadow: 0px 0px 10px 0px rgba(42, 39, 46, 0.1) !important;
 }
 
 .quote-container {
