--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,11 @@ footer a {
     max-height:100%;
 }
 
-
+/* VOCETERAPIA */
+#Voceterapia img {
+    max-width:100%;
+    max-height:100%;
+}
 
 
 
