--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ p {
 }
 
 .quote-container {
-    padding: 0 8rem;
+    padding: 0 5rem;
 }
 
 .quote-container .left-quote img, .right-quote img {
@@ -150,6 +150,10 @@ p {
     font-weight: 500;
 }
 
+.navbar .container-fluid {
+    z-index: 3;
+}
+
 /* FOOTER */
 footer {
     background-color: var(--main-color);
@@ -186,12 +190,23 @@ footer a {
     font-size: 4rem;
 }
 
-#Header img {
-    max-width: 450px;
-}
-
 #Header .header-small {
     font-size: 1.2rem;
+}
+
+#Header svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.1;
+}
+
+#Header img {
+    position: relative;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    max-width: 450px;
 }
 
 /* FORMAZIONE HOME */
@@ -242,6 +257,10 @@ footer a {
 #Canto img {
     max-width:100%;
     max-height:100%;
+}
+
+#Canto .row p {
+    text-align: justify !important;
 }
 
 /* RECENSIONI */
@@ -329,6 +348,10 @@ footer a {
     min-height: 600px;
 }
 
+#news li p {
+    text-align: justify;
+}
+
 /* CONTATTI */
 .contact-icon {
     max-width:100%;
@@ -343,4 +366,126 @@ footer a {
 #Contatti .fa-facebook, #Contatti .fa-instagram {
     font-size: 1.5rem;
     color: var(--main-color);
+}
+
+/* MEDIA QUERY*/
+
+/* LG - small laptop */
+@media only screen and (max-width: 1400px) {
+
+    #CardDeck .col-xl-6:last-child {
+        display: none;
+    }
+
+    #Voceterapia .left-card .card {
+        padding: 0 !important
+    }
+
+    div.eapps-widget {
+        padding: 1.5% 5%;
+    }
+
+    #ReviewForm {
+        width: 100% !important;
+        padding: 1.5% 5%;
+    }
+
+}
+
+/* MD - very small laptop */
+@media only screen and (max-width: 992px) {
+
+    #CardDeck .col-xl-6:last-child {
+        display: block;
+    }
+
+    #Formazione1 p{
+        text-align: justify !important;
+    }
+
+    #Elisa3 {
+        display: none;
+    }
+
+    #Voceterapia .left-card .card {
+        padding: 1.5rem !important
+    }
+
+    #Voceterapia img{
+        display: none;
+    }
+
+    #Voceterapia .btn {
+        width: 100%;
+    } 
+
+    #RightCard {
+        padding: 0 !important;
+    }
+
+    #Canto .btn {
+        width: 100%;
+    }
+
+    .contact-col .col-md-2 {
+        padding: 0 !important;
+    }
+
+    #contact-form {
+        width: 100% !important;
+    }
+
+}
+
+/* SML - mobile */
+@media only screen and (max-width: 720px) {
+
+    #Formazione .row {
+        text-align: center;
+    }
+
+    footer .footer-col {
+        padding-bottom: 2rem;
+    }
+
+    .footer-contact-icon {
+        width: 8% !important;
+    }
+
+    .footer-contact-p {
+        width: 90% !important;
+    }
+
+    #CardDeck .col-md-1, #AllReviews .col-md-1 {
+        width: 20% !important;
+    }
+
+    #CardDeck .col-md-11, #AllReviews .col-md-11 {
+        width: 80% !important;
+    }
+
+    #IndicataPer {
+        padding-top: 1.5rem;
+    }
+
+    #Header h1 {
+        font-size: 3rem;
+    }
+
+    .contact-col .col-md-2 {
+        padding: 1.5% 5% !important;
+    }
+
+    #Contatti .contact-col .col-lg-3 {
+        display: none;
+    }
+
+    #Contatti .contact-col .align-items-center .col-xl-1 {
+        width: 10% !important;
+    }
+
+    #Contatti .contact-col .align-items-center .col-xl-11 {
+        width: 90% !important;
+    }
+
 }
